[package]
name = "cc-auth"
description = "Simple backend authorization system"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
repository = "https://github.com/markcda/cc-auth"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
serde_json = "1.0"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
bb8-redis = "0.15"
cc-utils = { git = "https://github.com/markcda/cc-utils.git", default-features = false, features = ["salvo", "bb8-redis"] }
passwords = "3.1"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
cc-utils = { git = "https://github.com/markcda/cc-utils.git", default-features = false }
