[package]
name = "cc-auth"
description = "Simple backend authorization system"
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
repository = "https://github.com/markcda/cc-auth"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
serde_json = "1.0"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
bb8-redis = "0.20"
cc-utils = { git = "https://github.com/markcda/cc-utils.git", tag = "0.5.4", default-features = false, features = ["salvo"] }
passwords = "3.1"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
cc-utils = { git = "https://github.com/markcda/cc-utils.git", tag = "0.5.4", default-features = false }
